[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/default.theme" type="Theme" id=1]
[ext_resource path="res://Lobby/WaitingRoom.tscn" type="PackedScene" id=2]
[ext_resource path="res://Lobby/Lobby.gd" type="Script" id=3]

[node name="Lobby" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -600.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.11902
margin_top = 14.9406
margin_right = 2.11902
margin_bottom = -1.05945
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 34.0
text = "Lobby"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 1024.0
margin_bottom = 286.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 281.0
margin_right = 742.0
margin_bottom = 248.0
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 5.0
margin_right = 125.0
margin_bottom = 39.0
text = "Name"
align = 2

[node name="NameTextbox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 141.0
margin_right = 461.0
margin_bottom = 44.0
rect_min_size = Vector2( 320, 0 )
hint_tooltip = "Spielernamen festlegen"
text = "Player"
align = 1
placeholder_text = "Select Your Name"
placeholder_alpha = 0.492

[node name="IPLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 57.0
margin_right = 125.0
margin_bottom = 91.0
text = "IP"
align = 2

[node name="IPTextbox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 141.0
margin_top = 52.0
margin_right = 461.0
margin_bottom = 96.0
rect_min_size = Vector2( 320, 0 )
hint_tooltip = "Die IP Adresse des Spielerhost zu der verbunden werden soll"
text = "127.0.0.1"
align = 1
placeholder_text = "Host Ip Adress "

[node name="PortLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 109.0
margin_right = 125.0
margin_bottom = 143.0
text = "Port"
align = 2

[node name="PortTextbox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 141.0
margin_top = 104.0
margin_right = 461.0
margin_bottom = 148.0
rect_min_size = Vector2( 320, 0 )
hint_tooltip = "Der Port an dem der Host sein Spiel eröffnet hat"
text = "32032"
align = 1
placeholder_text = "Server Game Port"

[node name="MaxPlayersLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 161.0
margin_right = 125.0
margin_bottom = 195.0
text = "Max Players"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxPlayersTextbox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 141.0
margin_top = 156.0
margin_right = 461.0
margin_bottom = 200.0
rect_min_size = Vector2( 320, 0 )
hint_tooltip = "Die Anzahl der Spieler die sich gleichzeitig verbinden können"
text = "2"
align = 1
placeholder_text = "Max Player Count"

[node name="HostButton" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 208.0
margin_right = 125.0
margin_bottom = 248.0
hint_tooltip = "Ein Spiel erstellen und auf weitere Spieler warten"
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 141.0
margin_top = 208.0
margin_right = 461.0
margin_bottom = 248.0
hint_tooltip = "Einem bestehenden Spiel beitreten"
text = "Join Game"

[node name="NetworkStatusLabel" type="Label" parent="VBoxContainer"]
margin_top = 290.0
margin_right = 1024.0
margin_bottom = 324.0

[node name="VSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 328.0
margin_right = 1024.0
margin_bottom = 403.0
rect_min_size = Vector2( 0, 75 )

[node name="CenterContainer-2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 407.0
margin_right = 1024.0
margin_bottom = 447.0

[node name="Button" type="Button" parent="VBoxContainer/CenterContainer-2"]
margin_left = 460.0
margin_right = 564.0
margin_bottom = 40.0
text = "Hauptmenü"

[node name="WaitingRoom" parent="." instance=ExtResource( 2 )]
[connection signal="text_entered" from="VBoxContainer/CenterContainer/GridContainer/NameTextbox" to="." method="_on_NameTextbox_text_entered"]
[connection signal="text_entered" from="VBoxContainer/CenterContainer/GridContainer/IPTextbox" to="." method="_on_IPTextbox_text_entered"]
[connection signal="text_entered" from="VBoxContainer/CenterContainer/GridContainer/PortTextbox" to="." method="_on_PortTextbox_text_entered"]
[connection signal="text_entered" from="VBoxContainer/CenterContainer/GridContainer/MaxPlayersTextbox" to="." method="_on_MaxPlayersTextbox_text_entered"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/GridContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/GridContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
